[gd_scene load_steps=14 format=3 uid="uid://twxigihp4v0p"]

[ext_resource type="Script" path="res://Scripts/level_3.2.gd" id="1_4wxwl"]
[ext_resource type="Texture2D" uid="uid://clk5fy4ftenbe" path="res://Assets/Sprites/Levels/Ordenador-lvl3.png" id="2_263vg"]
[ext_resource type="FontFile" uid="uid://bre1cjdaepuvc" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="3_wul0n"]
[ext_resource type="AudioStream" uid="uid://43dxugi7680q" path="res://Assets/Music/Effects/Error.mp3" id="4_ebbbe"]
[ext_resource type="AudioStream" uid="uid://li844irlcfx6" path="res://Assets/Music/Effects/Correcto.mp3" id="5_usth4"]
[ext_resource type="AudioStream" uid="uid://boo6pdicslta7" path="res://Assets/Music/Effects/Tecla.mp3" id="6_mm5ef"]
[ext_resource type="PackedScene" uid="uid://d0kcrfxfsxk82" path="res://Scenes/Assets/barraprogreso/progressbar.tscn" id="7_10u6x"]
[ext_resource type="Texture2D" uid="uid://drmstm88ixw2f" path="res://Assets/Sprites/UI/R.png" id="8_3t6y3"]

[sub_resource type="Animation" id="Animation_lfgtj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uwxkt"]
resource_name = "desvanecer_entrada"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2swc2"]
resource_name = "desvanecer_salir"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_7ubi0"]
resource_name = "desvanecer_salir_team"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 3.06667, 3.96667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xx4bh"]
_data = {
"RESET": SubResource("Animation_lfgtj"),
"desvanecer_entrada": SubResource("Animation_uwxkt"),
"desvanecer_salir": SubResource("Animation_2swc2"),
"desvanecer_salir_team": SubResource("Animation_7ubi0")
}

[node name="Level3_2" type="Node2D"]
script = ExtResource("1_4wxwl")

[node name="Ordenador-lvl3" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_263vg")

[node name="CurrentWord" type="Label" parent="."]
offset_left = 289.0
offset_top = 171.0
offset_right = 989.0
offset_bottom = 308.0
theme_override_fonts/font = ExtResource("3_wul0n")
theme_override_font_sizes/font_size = 100
text = "Pendejo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="+1" type="Label" parent="."]
offset_left = 837.0
offset_top = 385.0
offset_right = 1229.0
offset_bottom = 522.0
theme_override_fonts/font = ExtResource("3_wul0n")
theme_override_font_sizes/font_size = 100
text = "+1"
horizontal_alignment = 1

[node name="TypeWord" type="Label" parent="."]
offset_left = 492.0
offset_top = 375.0
offset_right = 792.0
offset_bottom = 516.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_wul0n")
theme_override_font_sizes/font_size = 50
text = "
Pendej"

[node name="Guiones" type="Label" parent="."]
offset_left = 492.0
offset_top = 382.0
offset_right = 792.0
offset_bottom = 523.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_wul0n")
theme_override_font_sizes/font_size = 50
text = "
Pendej"

[node name="Timer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true
autostart = true

[node name="Tiempo" type="Label" parent="."]
visible = false
offset_left = 63.0
offset_top = 65.0
offset_right = 103.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("3_wul0n")
theme_override_font_sizes/font_size = 50

[node name="Puntos" type="Label" parent="."]
offset_left = 942.0
offset_top = 76.0
offset_right = 1047.0
offset_bottom = 145.0
theme_override_fonts/font = ExtResource("3_wul0n")
theme_override_font_sizes/font_size = 50

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ebbbe")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_usth4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_mm5ef")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xx4bh")
}

[node name="Progressbar" parent="." instance=ExtResource("7_10u6x")]
offset_left = 10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -90.0
offset_right = 1463.0
offset_bottom = 808.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_3t6y3")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
